tests/errors/_questions/incorrect/ident_not_type/no_main_type.c
main()

//hjk //нужно раскоментить чтобы код дальнейший читался корректно
int main() 
{	
	return 0;
}